@@ -8,8 +8,11 @@ odccm \- Daemon to keep connection to Windows Mobile device
 A legacy-free dccm-implementation for Windows Mobile 5 (and newer) devices. It responds to keep alives and provides other members of the SynCE suite of tools with details of the connected device.
 .SH OPTIONS
 .TP
+.B \-l, \-\-log\-level
+Set logging level from 0 (none) to 6 (debug), default is 3.
+.TP
 .B \-f, \-\-foreground
-Runs as non-daemon.
+Runs as non-daemon, sets logging level to 6.
 .TP
 .B --device-ip
 Specify device's IP address.
