@@ -1,3 +1,7 @@
+2007-11-25  Mark Ellis <mark@mpellis.org.uk>
+
+	* when running in background, send messages to syslog
+	
 2007-11-11  Mark Ellis <mark@mpellis.org.uk>
 
 	* improve backgrounding in odccm.c
